compiler/testData/cli/jvm/languageVersion.out
warning: language version 1.5 is deprecated and its support will be removed in a future version of Kotlin
compiler/testData/cli/jvm/languageVersion.kt:5:23: error: KSuspendFunctionN interfaces are not allowed as supertypes
abstract class Some : KSuspendFunction0<Unit>
                      ^^^^^^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
