compiler/testData/cli/jvm/languageVersion.kt
package test

import kotlin.reflect.*

abstract class Some : KSuspendFunction0<Unit>
